@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>24</java.version>
+		<java.version>25</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -145,7 +145,46 @@
             <artifactId>xmlsec</artifactId>
             <version>4.0.4</version> <!-- Use the latest stable version -->
         </dependency>
-	
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.moxy</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.xml.soap</groupId>
+			<artifactId>jakarta.xml.soap-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+
+		<!-- SAAJ implementation (runtime) -->
+		<dependency>
+			<groupId>com.sun.xml.messaging.saaj</groupId>
+			<artifactId>saaj-impl</artifactId>
+			<version>3.0.4</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Apache HttpClient (si no está ya) -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.14</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -163,11 +202,84 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
+
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>25</source>
+                    <target>25</target>
+                </configuration>
             </plugin>
+            <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.4.1</version>
+				<executions>
+					<execution>
+						<id>run-envio</id>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>java</executable>
+							<arguments>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argument>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED</argument>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argument>
+								<argument>--add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argument>
+								<argument>--add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argument>
+								<argument>-classpath</argument>
+								<classpath/>
+								<argument>SiiEnvioApi.EnviaDocumento</argument>
+								<argument>-c</argument>
+								<argument>src/main/resources/certificado.pfx</argument>
+								<argument>-s</argument>
+								<argument>contraseña</argument>
+								<argument>-f</argument>
+								<argument>60910000-1</argument>
+								<argument>src/main/resources/out/signedEnvFixed.xml</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+            <plugin>
+				<groupId>org.jvnet.jaxb</groupId>
+				<artifactId>jaxb-maven-plugin</artifactId>
+				<version>4.0.8</version>
+				<executions>
+					<execution>
+						<id>generate-sii-schemas</id>
+                        <phase>generate-sources</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<schemaDirectory>${project.basedir}/src/main/java/SiiEnvioApi/schemas</schemaDirectory>
+							<schemaIncludes>
+								<include>*.xsd</include>
+							</schemaIncludes>
+							<schemaExcludes>
+								<exclude>**/*.xsdconfig</exclude>
+							</schemaExcludes>
+							<generatePackage>SiiEnvioApi.generatedClasses.cl.sii.siiDte</generatePackage>
+							<generateDirectory>${project.basedir}/src/main/java/</generateDirectory>
+							<extension>true</extension>
+							<strict>false</strict>
+							<verbose>true</verbose>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>jakarta.xml.bind</groupId>
+						<artifactId>jakarta.xml.bind-api</artifactId>
+						<version>4.0.2</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 
